kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/bookstore: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: 3005BookStore
        - name: POSTGRES_PASSWORD
          value: "1234"
        - name: POSTGRES_USER
          value: postgres
        image: postgres
        imagePullPolicy: ""
        name: db
        resources: {}
        volumeMounts:
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          name: db-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-claim0
        persistentVolumeClaim:
          claimName: db-claim0
status: {}
