kubernetes/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
  - name: "5555"
    port: 5555
    targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
