kubernetes/bookstore-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: bookstore
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/bookstore: "true"
  podSelector:
    matchLabels:
      io.kompose.network/bookstore: "true"
